docs: Update README, ref: NOISSUE